# LLMOps_group_6_project

./: README.md  main.py  pyproject.toml
data/: www.csn.se_betala-tillbaka.html.2026-04-28T12_49_42.685Z.md  www.csn.se_bidrag-och-lan.html.2026-04-28T12_44_30.895Z.md  www.csn.se_nar-kommer-pengarna.html.2026-04-28T12_51_05.186Z.md
rag/: docker-compose.yaml
rag/backend/: agents.py  api.py  constants.py  data_model.py  pyproject.toml
rag/data/: www.csn.se_.2026-04-28T12_54_04.949Z.md  www.csn.se_betala-tillbaka_betala-tillbaka-hemutrustningslan.html#svid10_448c6fa015890d2c81f638#svid10_448c6fa015890d2c81f63b.2026-05-12T11_11_05.172Z.md  www.csn.se_bidrag-och-lan_for-din-situation_arbetslos.html.2026-05-12T11_15_30.211Z.md  www.csn.se_bidrag-och-lan_for-din-situation_for-dig-som-ar-under-18-ar.html.2026-05-12T11_22_12.922Z.md  www.csn.se_bidrag-och-lan_for-din-situation_utlandsk-medborgare_ny-i-sverige_for-dig-som-ar-flykting-eller-god-man-for-ensamkommande-barn.html.2026-05-12T11_24_19.681Z.md  www.csn.se_bidrag-och-lan_pilotverksamhet-nationell-yrkesutbildning.html#svid10_5f7dd70418f97b28973a6a#svid10_5f7dd70418f97b28973a6b#svid10_5f7dd70418f97b28973a6c.2026-05-12T10_44_21.350Z.md  www.csn.se_bidrag-och-lan_tillagg-till-studiestodet_for-studier-med-studiemedel_tillaggsbidrag.html.2026-05-12T11_32_03.884Z.md  www.csn.se_bidrag-och-lan_tuff-ersattning.html.2026-05-12T11_14_49.816Z.md  www.csn.se_blanketter.html.2026-04-28T12_51_25.249Z.md  www.csn.se_download_18.4d7595ec19a0342c1ca493_1763026113261_2437B_belopp_2511.pdf.2026-05-12T10_36_27.151Z.md  (+11 more)
(+128 files in other folders)
