[project]
name = "llmops-group-6-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "lancedb>=0.30.2",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pydantic-ai>=1.87.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.46.0",
]
